--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -9,8 +9,7 @@
     float: left;
     width: 300px;
     height: 225px;
-    margin-top: 10px;
-    margin-right: 30px;
+    margin: 10px 30px 10px 0px;
 }
 
 img {
