--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,28 +6,50 @@
 
 body, html {
     font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
-    font-size: 15px;
     color: #555555;
     background-image: url(../images/sakura_bg.png);
     height: 100%;
+    min-width: 600px;
     margin: 0;
 }
 
 .wrapper {
+    width: 100%;
     min-height: 100%;
     margin-bottom: -50px;
 }
 
 header {      
     border-bottom: 2px solid #F4B49C;
-    background-color: #fef2ec;  
+    background-color: #fef2ec;
+    height: 72px;
     width: 100%;
+    margin-bottom: 30px;
+}
+
+nav {      
+    float: right;
+    height: 72px;
+    padding-top: 25px;
+    margin-left: 10px;
+    margin-right: 10px;
+    text-align: center;
+    word-spacing: 6px;    
+}
+
+.navbar {
+    background-color: #fef2ec;   
+    width: 960px; 
+    height: 70px;
+    margin: auto; 
 }
 
 h1 {
     font-family: Georgia, Times, "Times New Roman", serif;
     color: white;
-    background-color: #F4B49C;    
+    background-color: #F4B49C;
+    font-size: 2em;
+    font-weight: bold;
     width: 170px;    
     padding: 20px;
     margin: auto; 
@@ -36,7 +58,9 @@ h1 {
 
 h2 {
     color: #F4B49C;
-    padding: 20px 0px 0px 0px;    
+    padding: 20px 0px 0px 0px;
+    font-size: 2em;
+    font-weight: bold;   
 }
 
 a {
@@ -59,11 +83,7 @@ a:active {
     color: hotpink;
 }
 
-nav {      
-    float: right;
-    margin-top: 30px;
-    word-spacing: 6px;
-}
+
 
 .container {
     background-color: #fef2ec;   
@@ -79,17 +99,25 @@ nav {
 
 hr {
     border: 2px solid #F4B49C;
+    margin-bottom: 10px;
+}
+
+.main {
+    background-color: #fef2ec;   
+    width: 960px;
+    margin: auto; 
 }
 
 #content {
     width: 960px;
-    padding: 0px 20px 20px 20px;
-    margin-bottom: 20px;
+    padding: 0px 20px 15px 20px;
+
 }
 
 p {
     text-align: justify;
-    line-height: 20px;
+    line-height: 24px;
+    font-size: 15px;
 }
 
 p:last-child { 
@@ -97,9 +125,8 @@ p:last-child {
 }
 
 #bio-image {
-    float: left;
-    margin-top: 10px;
-    margin-right: 10px;    
+    float: left;    
+    margin-right: 15px;    
     width: 350px;
     height: 350px;
 }
@@ -110,7 +137,7 @@ p:last-child {
 
 .footer {
     border-top: 8px solid #F4B49C;
-    background-color: #fef2ec;   
+    background-color: #fef2ec;
 }
 
 /* Contact Page */
@@ -121,19 +148,49 @@ input, textarea {
 }
 
 /* Media queries */
+
 @media screen and (max-width: 980px) {
+    .wrapper {        
+        width: 100%;
+        height: auto;
+        margin-bottom: -50px;
+    }
+
+    .navbar {
+        padding-left: 50px;
+        padding-right: 50px;
+    }
+    
+    .container {
+        width: 600px;
+        display: block;
+        float: left;
+        margin-left: 60px;
+    } 
+
+    #bio-image {
+        width: 40%;
+        height: auto;
+    }
+    
+    #content {
+        width: 100%;
+        display: block;
+        float: none;  
+
+    }
+  
 
 }
+
 
 @media screen and (max-width: 768px) {
 
+
 }
+
 
 @media screen and (max-width: 640px) {
-    header {
-        position: static;
-    }
+
+
 }
-
-
-
