--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -176,19 +176,41 @@ input, textarea {
     #content {
         width: 100%;
         display: block;
-        float: none;  
-
+        float: none;
     }
-  
-
 }
 
 
 @media screen and (max-width: 768px) {
+    .wrapper {        
+        width: 100%;
+        height: auto;
+        margin-bottom: -50px;
+    }
 
+    .navbar {
+        width: 100%;
+        padding-left: 20px;  
+    }
+    
+    .container {
+        width: 710px;
+        display: block;
+        float: left;
+        margin-left: 20px;
+    } 
 
+    #bio-image {
+        width: 40%;
+        height: auto;
+    }
+    
+    #content {
+        width: 100%;
+        display: block;
+        float: none;
+    }
 }
-
 
 @media screen and (max-width: 640px) {
 
