--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -83,8 +83,6 @@ a:active {
     color: hotpink;
 }
 
-
-
 .container {
     background-color: #fef2ec;   
     width: 960px;    
@@ -213,6 +211,58 @@ input, textarea {
 }
 
 @media screen and (max-width: 640px) {
+    .wrapper {        
+        width: 100%;
+        height: auto;
+        margin-bottom: -50px;
+    }
+
+    header {
+        position: static;
+    }
+
+    .navbar {
+        margin: 0px;
+        padding: 0px;
+    }
+
+    h1 {
+        width: 100%;
+        text-align: center;
+    }
+
+    nav {
+        width: 100%;
+        height: 40px;
+        padding-top: 10px;        
+        margin: 0px;
+        background-color: #fef2ec;
+        border-bottom: 2px solid #F4B49C;
+        text-align: center;
+    }
+ 
+    .container {
+        width: 600px;
+        display: block;
+        margin-top: 20px;
+        margin-bottom: 50px;
+        float: none;
+    } 
+
+    #content {
+        width: 100%;
+        display: block;
+
+    }
+
+    #bio-image {
+        width: 100%;
+        
+        height: auto;
+    }
+
+
+
 
 
 }
