--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -31,3 +31,136 @@ img {
     padding-top: 10px;
     bottom: 20px;
 }
+
+
+
+
+/* Media queries */
+
+@media screen and (max-width: 980px) {
+    .wrapper {        
+        width: 100%;
+        height: auto;
+        margin-bottom: -50px;
+    }
+
+    .navbar {
+        padding-left: 50px;
+        padding-right: 50px;
+    }
+    
+    .container {
+        width: 600px;
+        display: block;
+        float: none;
+        margin-left: 60px;
+        margin-bottom: 50px;
+    } 
+    
+    #content {
+        width: 100%;
+        display: block;
+        float: none;
+    }
+
+    .portfolio-item {
+        width: 250px;
+        margin-right: 20px;
+        padding: 0px;
+        float: left;
+        display: block;
+    }
+
+    img {
+        width: 250px;
+        height: 100%;
+        margin: 0px;
+        padding: 0px;
+        float: left;
+        display: block;
+    }
+
+    .label {
+        width: 250px;
+    }
+
+}
+
+
+@media screen and (max-width: 768px) {
+    .wrapper {        
+        width: 100%;
+        height: auto;
+        margin-bottom: -50px;
+    }
+
+    .navbar {
+        width: 100%;
+        padding-left: 20px;  
+    }
+    
+    .container {
+        width: 710px;
+        display: block;
+        float: left;
+        margin-left: 20px;
+    } 
+
+    #bio-image {
+        width: 40%;
+        height: auto;
+    }
+    
+    #content {
+        width: 100%;
+        display: block;
+        float: none;
+    }
+}
+
+@media screen and (max-width: 640px) {
+    .wrapper {        
+        width: 100%;
+        height: auto;
+        margin-bottom: -50px;
+    }
+
+    header {
+        position: static;
+    }
+
+    .navbar {
+        margin: 0px;
+        padding: 0px;
+    }
+
+    h1 {
+        width: 100%;
+        text-align: center;
+    }
+
+    nav {
+        width: 100%;
+        height: 40px;
+        padding-top: 10px;        
+        margin: 0px;
+        background-color: #fef2ec;
+        border-bottom: 2px solid #F4B49C;
+        text-align: center;
+    }
+ 
+    .container {
+        width: 600px;
+        display: block;
+        margin-top: 20px;
+        margin-bottom: 50px;
+        float: none;
+    } 
+
+    #content {
+        width: 100%;
+        display: block;
+
+    }
+
+}
