--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -32,9 +32,6 @@ img {
     bottom: 20px;
 }
 
-
-
-
 /* Media queries */
 
 @media screen and (max-width: 980px) {
@@ -83,9 +80,7 @@ img {
     .label {
         width: 250px;
     }
-
 }
-
 
 @media screen and (max-width: 768px) {
     .wrapper {        
@@ -102,7 +97,6 @@ img {
     .container {
         width: 710px;
         display: block;
-        float: left;
         margin-left: 20px;
     } 
 
@@ -115,6 +109,27 @@ img {
         width: 100%;
         display: block;
         float: none;
+    }
+
+    .portfolio-item {
+        width: 300px;
+        margin-right: 20px;
+        padding: 0px;
+        float: left;
+        display: block;
+    }
+
+    img {
+        width: 300px;
+        height: 100%;
+        margin: 0px;
+        padding: 0px;
+        float: left;
+        display: block;
+    }
+
+    .label {
+        width: 300px;
     }
 }
 
@@ -159,8 +174,28 @@ img {
 
     #content {
         width: 100%;
+        height: 100%;
         display: block;
-
+        margin: 0px;
+        padding-left: 20px;
     }
 
+    .portfolio-item {
+        width: 560px;
+        height: 420px;
+        margin-bottom: 10px;
+        display: block;
+    }
+
+    img {
+        width: 560px;
+        height: 420px;
+        margin: 0px;
+        padding: 0px;        
+        display: block;
+    }
+
+    .label {
+        width: 100%;
+    }
 }
